--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "quasar": "^1.0.0",
     "truffle-hdwallet-provider": "^1.0.17"
   },
