--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "quasar": "^1.0.0",
+    "truffle-assertions": "^0.9.1",
     "truffle-hdwallet-provider": "^1.0.17"
   },
   "devDependencies": {
