--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chai-as-promised": "^7.1.1",
     "quasar": "^1.0.0",
     "truffle-assertions": "^0.9.1",
+    "truffle-contract": "^4.0.31",
     "truffle-hdwallet-provider": "^1.0.17"
   },
   "devDependencies": {
