Update readme to include truffle instruction

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "communiteths",
   "version": "0.0.1",
-  "description": "The future of decentralized governance and finance for communities.",
+  "description": "The future of decentralized finance and governance for communities.",
   "productName": "CommunitETHs",
   "cordovaId": "org.communiteths.app",
   "author": "Tommy Cox <tommy.cox@protonmail.com>",
